--- a/index.html
+++ b/index.html
@@ -120,13 +120,16 @@
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
   </table>
-  <p><em>Do you agree?</em></p>
 
-  <form class="" action="index.html" method="post">
+<div class="container">
+  <p><em>Do you agree?</em></p>
+  <form class="form-container" action="index.html" method="post">
     <label>Your Name:</label>
     <input type="text" name="" value="">
     <input type="submit" name="">
-  </form>
+  </form>  
+</div>
+
 </body>
 
 </html>
